force-app/main/default/objects/Subscription__c/Subscription__c.object-meta.xml
<CustomObject>
    <description
  >Customer subscription lifecycle record: term, MRR and renewal status.</description>
    <label>Subscription</label>
    <nameField>
        <displayFormat>SUB-{0000}</displayFormat>
        <label>Subscription Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>