force-app/main/default/objects/Subscription__c/fields/Days_Until_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Expiry__c</fullName>
    <description
  >Days remaining until the subscription end date. Negative once expired.</description>
    <formula>End_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Expiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>