force-app/main/default/objects/Subscription__c/fields/Last_Reminder_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reminder_Sent_Date__c</fullName>
    <description
  >Date the most recent renewal reminder task was created. Used to de-duplicate the daily expiry check.</description>
    <label>Last Reminder Sent Date</label>
    <type>Date</type>
</CustomField>