force-app/main/default/objects/Subscription__c/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <description>Monthly Recurring Revenue for this subscription.</description>
    <label>MRR</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>