force-app/main/default/objects/Subscription__c/fields/Renewal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>