force-app/main/default/objects/Subscription__c/fields/Renewal_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Type__c</fullName>
    <label>Renewal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
                <default>true</default>
                <label>New Business</label>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>