force-app/main/default/objects/Subscription__c/validationRules/End_Date_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_After_Start_Date</fullName>
    <active>true</active>
    <description
  >The subscription end date must be on or after the start date.</description>
    <errorConditionFormula>NOT(ISBLANK(Start_Date__c)) &amp;&amp;
NOT(ISBLANK(End_Date__c)) &amp;&amp;
End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be earlier than Start Date.</errorMessage>
</ValidationRule>