force-app/main/default/objects/Subscription__c/validationRules/MRR_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>MRR_Must_Be_Positive</fullName>
    <active>true</active>
    <description>MRR must be greater than zero.</description>
    <errorConditionFormula
  >NOT(ISBLANK(MRR__c)) &amp;&amp; MRR__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>MRR__c</errorDisplayField>
    <errorMessage>MRR must be greater than zero.</errorMessage>
</ValidationRule>