force-app/main/default/objects/Subscription__c/validationRules/Status_Change_Guard.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Change_Guard</fullName>
    <active>true</active>
    <description
  >Blocks a manual change of Status to Expired while the subscription still has days remaining. The scheduled expiry flow runs as an admin and is exempt.</description>
    <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp;
ISPICKVAL(Status__c, &quot;Expired&quot;) &amp;&amp;
Days_Until_Expiry__c &gt; 0 &amp;&amp;
NOT($Permission.Bypass_Subscription_Flow)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage
  >Status cannot be set to Expired while the subscription still has days remaining before its End Date.</errorMessage>
</ValidationRule>