force-app/main/default/objects/Subscription__c/listViews/All_Subscriptions.listView-meta.xml
<ListView>
    <fullName>All_Subscriptions</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>MRR__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Days_Until_Expiry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Subscriptions</label>
</ListView>