force-app/main/default/objects/Subscription__c/listViews/Expiring_Soon.listView-meta.xml
<ListView>
    <fullName>Expiring_Soon</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>MRR__c</columns>
    <columns>End_Date__c</columns>
    <columns>Days_Until_Expiry__c</columns>
    <columns>Renewal_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Expiring Soon</value>
    </filters>
    <label>Expiring Soon</label>
</ListView>